첫번째 글, 블로그 소개, 콘택트 수정

--- a/about.html
+++ b/about.html
@@ -1,12 +1,31 @@
 ---
 layout: page
 title: About
-description: 블로그 소개
+description: 스마일 다이어리 및 주인장 소개
 background: '/img/bg-about.jpg'
 ---
 
-<p>아직 그리고 가을 내일 까닭입니다. 별 어머니, 쓸쓸함과 사랑과 봅니다. 다하지 내일 벌써 어머님, 이네들은 이름과, 것은 있습니다. 말 어머니, 별 무엇인지 한 이국 이름과 하나에 사람들의 있습니다. 둘 계절이 이름과 추억과 덮어 가득 별 이름과, 거외다. 별 한 어머님, 아직 이국 딴은 써 봅니다. 위에 이름자를 별들을 그리워 있습니다. 별 차 추억과 노새, 딴은 둘 이름과, 까닭입니다. 같이 마리아 까닭이요, 하나에 이 아스라히 청춘이 버리었습니다.</p>
+<p>
+  <b><h3>스마일 다이어리 주인장 소개</h3></b>
+  <br>
+  안녕하세요. <br>저는 대학교를 졸업하고 2개월 뒤에 일을 시작하여 신입부터 현재까지 약 2년 4개월 정도를 학생독립만세라는 소셜벤쳐 스타트업에서 1인 디지털 마케터로 일하고 있습니다. 비전공인 행정학과를 졸업했으며 마케팅에 관련된 공모전이나 인턴 경험은 하나 없이 취업에 성공 했습니다. <br>"스타트업이라 그런 거 아니냐?"라고 반문하실 수도 있겠지만 저는 스타트업이라서 그런 게 아니라 디지털 마케팅이었기 때문에 가능했다고 생각합니다.
+</p>
 
-<p>겨울이 별이 가을로 당신은 슬퍼하는 위에 듯합니다. 헤일 이런 슬퍼하는 버리었습니다. 풀이 강아지, 위에 것은 이런 마리아 계십니다. 별 이름을 그러나 마디씩 지나가는 하나에 잠, 무성할 밤을 버리었습니다. 묻힌 시인의 가난한 북간도에 어머님, 별 새겨지는 별빛이 풀이 계십니다. 위에 하나에 어머님, 계십니다. 이름을 봄이 강아지, 않은 차 까닭입니다. 오는 멀듯이, 불러 보고, 별 없이 언덕 북간도에 까닭입니다. 하나에 별 된 너무나 나는 옥 봅니다. 사람들의 된 보고, 다 지나고 딴은 별 멀리 이런 계십니다.</p>
+<p>
+  <b><h3>'왜 스마일 다이어리인가요?''</h3></b>
+  <br>
+  '스타트업의 디지털 마케팅을 1인 마케터로서 책임지고 있는' 주인장의 이야기를 다루기 때문에 스마일 다이어리로 명명하였습니다.
+</p>
 
-<p class="mb-5">라이너 이름을 이름과, 청춘이 까닭입니다. 이름자를 가을 별을 추억과 노루, 별 계십니다. 사람들의 우는 이름을 하나에 까닭입니다. 써 내 이런 딴은 오는 말 거외다. 별 때 별에도 무엇인지 아직 이름자를 봅니다. 멀듯이, 별 소학교 나는 까닭입니다. 어머님, 풀이 별 가을로 릴케 듯합니다. 위에 것은 사랑과 내일 마리아 된 별 가난한 까닭입니다. 하나에 아무 남은 것은 한 내린 언덕 잔디가 같이 듯합니다. 하나에 별 속의 나의 새겨지는 까닭입니다.</p>
+<p>
+  <b><h3>저자 이름이 '주니언'인 이유가 뭔가요?</h3></b>
+  <br>
+  '주니언'은 저의 별명이자 회사에서 사용하는 영어 닉네임입니다. <br>TMI로 말씀드리면 저의 이름에 한 글자인 준과 제가 매우 좋아하는 캐릭터인 라이언이 합쳐진 별명입니다.
+</p>
+
+<p>
+  <b><h3>어떤 내용을 주로 다루실 건가요?</h3></b>
+  <br>
+  우선 디지털 마케터로 취업을 준비하는 취준 기간의 회고 글에는 진솔하게 취업하기까지의 여정을 써보려고 합니다. 단순히 '어떻게' 취업했다가 아닌 디지털 마케터로 취업하는 데 도움 되었던 활동, 서비스 등을 함께 소개할 예정입니다. <br>잘못된 정보성 글에 빠져 취업에 직결되는 것보다 부수적인 활동, 지식 학습에 집중하고 필수가 아닌 자격증에 매달리는 취준생을 올바른 길로 인도하고자 합니다.<br>
+  취준 기간의 회고가 끝나면 신입부터 스타트업 1인 마케터로서 살아온 저의 삶을 돌아보려고 합니다. 진솔하게 나 자신을 돌아보며 미래의 1인 디지털 마케터, 갓 1인 디지털 마케터가 된 분들에게 유용한 정보를 제공하고자 합니다.<br> 많이 기대해주세요!!!
+</p>
