--- a/contact.html
+++ b/contact.html
@@ -6,33 +6,26 @@ background: '/img/bg-contact.jpg'
 form: true
 ---
 
-<p>문의 사항이 있으신가요? 아래 양식을 작성해주세요.</p>
+<p>취준하면서 궁금한 점, 주인장에게 궁금한 점을 자유롭게 알려주세요!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>이름</label>
-      <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="여기에 이름을 작성하세요.">
+      <input type="text" class="form-control" placeholder="이름을 작성해주세요. 이름이 부담스럽다면 별명도 괜찮습니다:-)" id="name" required data-validation-required-message="여기에 이름을 작성하세요.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Email</label>
-      <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="여기에 이메일 주소를 입력하세요.">
-      <p class="help-block text-danger"></p>
-    </div>
-  </div>
-  <div class="control-group">
-    <div class="form-group col-xs-12 floating-label-form-group controls">
-      <label>연락처</label>
-      <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="연락 받을 연락처를 입력하세요.">
+      <input type="email" class="form-control" placeholder="이메일 주소를 작성해주세요." id="email" required data-validation-required-message="여기에 이메일 주소를 입력하세요.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>문의 내용</label>
-      <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="문의 내용을 입력하세요."></textarea>
+      <textarea rows="5" class="form-control" placeholder="디지털 마케터를 준비하면서 궁금한 점이 있거나 주인장에게 궁금한 것이 있으면 자유롭게 작성해주세요." id="message" required data-validation-required-message="문의 내용을 입력하세요."></textarea>
       <p class="help-block text-danger"></p>
     </div>
   </div>
