블로그 및 주인장 소개 오타 수정

--- a/about.html
+++ b/about.html
@@ -12,19 +12,19 @@ background: '/img/bg-about.jpg'
 </p>
 
 <p>
-  <b><h3>'왜 스마일 다이어리인가요?''</h3></b>
+  <b><h3>"왜 스마일 다이어리인가요?"</h3></b>
   <br>
   '스타트업의 디지털 마케팅을 1인 마케터로서 책임지고 있는' 주인장의 이야기를 다루기 때문에 스마일 다이어리로 명명하였습니다.
 </p>
 
 <p>
-  <b><h3>저자 이름이 '주니언'인 이유가 뭔가요?</h3></b>
+  <b><h3>"저자 이름이 '주니언'인 이유가 뭔가요?"</h3></b>
   <br>
   '주니언'은 저의 별명이자 회사에서 사용하는 영어 닉네임입니다. <br>TMI로 말씀드리면 저의 이름에 한 글자인 준과 제가 매우 좋아하는 캐릭터인 라이언이 합쳐진 별명입니다.
 </p>
 
 <p>
-  <b><h3>어떤 내용을 주로 다루실 건가요?</h3></b>
+  <b><h3>"어떤 내용을 주로 다뤄지나요?"</h3></b>
   <br>
   우선 디지털 마케터로 취업을 준비하는 취준 기간의 회고 글에는 진솔하게 취업하기까지의 여정을 써보려고 합니다. 단순히 '어떻게' 취업했다가 아닌 디지털 마케터로 취업하는 데 도움 되었던 활동, 서비스 등을 함께 소개할 예정입니다. <br>잘못된 정보성 글에 빠져 취업에 직결되는 것보다 부수적인 활동, 지식 학습에 집중하고 필수가 아닌 자격증에 매달리는 취준생을 올바른 길로 인도하고자 합니다.<br>
   취준 기간의 회고가 끝나면 신입부터 스타트업 1인 마케터로서 살아온 저의 삶을 돌아보려고 합니다. 진솔하게 나 자신을 돌아보며 미래의 1인 디지털 마케터, 갓 1인 디지털 마케터가 된 분들에게 유용한 정보를 제공하고자 합니다.<br> 많이 기대해주세요!!!
